--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1144,6 +1144,10 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .SuccessMessage {width: 100%; display: inline-block; position: fixed; top: 0px; left: 0px; right: 0px; padding: 40px; z-index: 2147483647; text-align: center;}
 .SuccessMessage a {text-decoration: underline; font-size: 13px;}
 
+.BollinoEth, .BollinoOP {position: absolute; right: 5px; bottom: 5px; font-size: 12px; font-weight: bold; padding: 7px; border-radius: 50%; border: none; z-index: 1000;}
+.CollectionFolder .BollinoEth, .CollectionFolder .BollinoOP {font-size: 8px;padding:3px; right: 2px; bottom: 2px;}
+
+
 @media only screen and (max-width: 990px) {
   .NavigationItem {font-size: 11px;width: 20%;overflow: hidden; }
   .Navigation .Selected img {display: none;}
@@ -2399,6 +2403,16 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .NetworkSelectL2 {background-color: #ff0420;border-radius: 0px 12px 12px 0px!important;}
 .dark .NetworkSelectL2 {background-color: #ff0420;}
 .sepia .NetworkSelectL2 {background-color: #ff0420;}
+
+.light .BollinoOP {background-color: #ff0420; color: #ffffff;}
+.biz .BollinoOP {background-color: #ff0420; color: #ffffff;}
+.dark .BollinoOP {background-color: #ff0420; color: #ffffff;}
+.sepia .BollinoOP {background-color: #ff0420; color: #ffffff;}
+
+.light .BollinoEth {background-color: #627eea;color: #ffffff;}
+.biz .BollinoEth {background-color: #627eea;color: #ffffff;}
+.dark .BollinoEth {background-color: #627eea;color: #ffffff;}
+.sepia .BollinoEth {background-color: #627eea;color: #ffffff;}
 
 .light .NetworkSelect p {color: #ffffff}
 .biz .NetworkSelect p {color: #ffffff}
