--- a/src/all.module.css
+++ b/src/all.module.css
@@ -88,6 +88,8 @@ body {
 .ModalBoxBanner h6 {font-size: 13px; width: 100%; display: inline-block; padding: 10px 20px; margin: 10px auto; text-align: left; font-weight: normal; line-height: 1.3;}
 .ModalBoxBanner p {font-size: 13px; width: 100%; display: inline-block; padding: 5px 30px; text-align: left;}
 .ModalBoxBanner h5 {padding: 20px; font-size: 20px;}
+.ModalBoxBanner h6 a {text-decoration: underline;}
+.ModalBoxBanner span {padding: 5px 20px; font-size: 10px; line-height: 1.2; text-align: left; display: inline-block;}
 .Enter {background-color: #00F2C2; padding: 12px 18px; text-align: center; color: #ffffff; font-weight: bold; margin: 20px auto; font-size: 14px; display: inline-block; border-radius: 16px;}
 
 .DappBannerExpl {display: inline-block; padding: 5px; margin: 10px auto; width: 80%;}
@@ -1289,13 +1291,43 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .OrgHeadline figure {width: 80px; height: 80px;}
  .OrgHeadline figure img {width: 80px; height: 80px;}
  .OrgHeadlineSide {display: none;}
- .OrgTitle {width: auto; height: auto;}
+ .OrgTitle {width: auto; height: auto; padding: 20px 5px;}
+ .GovCardHeadOrganizationInfo p {font-size: 11px;}
  .OrgTitle p {display: none;}
  .OrgTitle h6 {font-size: 16px;}
- .GuildTagO, .GuildTagD {display: block;width: 120px;text-align: center; margin: 5px auto;}
+ .GuildTagO, .GuildTagD {display: block;width: auto;text-align: center; margin: 5px auto; font-size: 11px; padding: 3px; position: absolute; top: 0px; right: 3px;}
  .OrgLinks {display: inline-block; margin: 5px auto; padding: 3px; text-align: left; width: 95%;}
- .OrgPartViewF, OrgMainThingsCard, .OrgPartView {width: 95%;}
-
+ .OrgLinks .ExtLinkButton {min-width: 60px; font-size: 10px;}
+ .OrgPartViewF, OrgMainThingsCard, .OrgPartView, .OrgMainThingsCard, .OrgMainThingsCardSL {width: 95%;}
+ .OrgPartFarm {display: none;}
+ .OrgThingsCardPics {display: none;}
+ .OrgThingsInfoContent, .OrgThingsInfoContent {width: 200px;}
+ .OrgPartViewF {display: none;}
+ .OrgPartTitle {width: 100%; margin: 0;}
+ .OrgPartView {text-align: center;}
+ .InvestmentsSectionBuySell {width: 100%;}
+ .GovCard {width: 95%; margin: 10px auto;}
+ .GovCardHead {padding: 10px;}
+ .GovCardHeadOrganizationTitle {width: 100%;}
+ .GovCardHeadOrganizationTitle .ExtLinkButton {display: none;}
+ .GovernanceCardInfoOpen {width: 50%;}
+ .GovCardHeadOrganizationInfo {padding: 10px; width: 48%;}
+ .GovLeft {width: 100%;}
+ .Govright {width: 100%; margin-left: 0; margin-top: 10px;}
+ .Rules {display: inline-block; width: 55%;margin: 10px;}
+ .Rule p {font-size: 10px;line-height: 1.2;}
+ .Rule p b {font-size: 11px;line-height: 1.2;}
+ .VotingPowersList {display: inline-block; width: 35%; vertical-align: top;}
+ .Proposal {padding: 10px;}
+ .ProposalTitle {width: 100%; font-size: 13px; line-height: 1.2;}
+ .ProposalVotesCount {width: 100%; display: inline-block; text-align: center;}
+ .ProposalVotesCount span {width: 50%; display: inline-block; text-align: left;}
+ .ProposalVotesCount .RegularButtonDuo {width: 50%; display: inline-block; text-align: center;}
+ .Upshots {width: 100% !important;}
+ .Vote {width: 100%; margin: 10px auto;}
+ .DescriptionBig {padding: 10px auto;}
+ .MultiVoteBox {width: 100%;}
+ .RegularVoteBoxQuantity .TradeMarketTokenAmount {width: 135px !important;}
 
  .AccountAll {width: 95%;}
  .AccountAvatar {width: 80px; height: 80px; margin: 30px auto 10px auto;}
@@ -1310,6 +1342,11 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .CardsLayerS figure img {width: 30px; height: 30px;}
 
  .SingleContentPage {max-width: 100%;}
+
+ .ModalBoxBanner {width: 95%;padding: 10px;}
+ .ModalBoxBanner h5 {font-size: 14px;}
+
+ .Factories {display: none;}
 }
 
 /* themes */
