--- a/src/all.module.css
+++ b/src/all.module.css
@@ -83,8 +83,8 @@ body {
 .SendToL2 {border: 0px solid !important; ; font-weight: bold; border-radius: 5px;display: inline-block;width: 230px !important;margin: 5px;font-size: 11px;padding: 7px 2px !important;text-align: center;cursor: pointer;box-shadow: none;}
 
 
-.ModalBack {position: fixed; z-index: 2147483646; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; text-align: center;display: flex;flex-wrap: wrap;flex-direction: row;justify-content: center;align-items: center;align-content: center}
-.ModalBoxBanner {width: 500px; overflow: scroll; max-height: 70%;  z-index: 100000000000000;border-radius: 20px; padding: 40px;}
+.ModalBack {position: fixed; z-index: 99999998; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; text-align: center;display: flex;flex-wrap: wrap;flex-direction: row;justify-content: center;align-items: center;align-content: center}
+.ModalBoxBanner {width: 500px; overflow: scroll; max-height: 70%;  z-index: 99999999;border-radius: 20px; padding: 40px;}
 .ModalBoxBanner h6 {font-size: 13px; width: 100%; display: inline-block; padding: 10px 20px; margin: 10px auto; text-align: left; font-weight: normal; line-height: 1.3;}
 .ModalBoxBanner p {font-size: 13px; width: 100%; display: inline-block; padding: 5px 30px; text-align: left;}
 .ModalBoxBanner h5 {padding: 20px; font-size: 20px;}
@@ -244,13 +244,13 @@ body {
 .DDapp_Menu2 > li > a {display: inline-block;padding: 8px 10px;font-size: 12px;display: inline-block; text-decoration: none; cursor: pointer;}
 
 .Header {height: 100%;display: inline-block;text-align: center;width:200px;min-height: 500px;vertical-align: top;overflow: hidden;position: relative;}
-.Header .FixedHeader {position: fixed; left: 0; top: 0; width: 200px; height: 100%;z-index: 1000000;}
+.Header .FixedHeader {position: fixed; left: 0; top: 0; width: 200px; height: 100%;z-index: 9999999;}
 .Header .BlurHeader {display: none; z-index: 10; }
 
 .logoMain {height: 90px; width: 110px; margin: 20px 0px 20px 10px; display: block;}
 .logoMain img {height: 90px; width: 110px; display: block;}
 
-.Cart {width: 80%; display: inline-block; padding: 15px; position: fixed; left: 10%; bottom:10px;  border-radius: 12px;z-index: 1000000000;}
+.Cart {width: 80%; display: inline-block; padding: 15px; position: fixed; left: 10%; bottom:10px;  border-radius: 12px;z-index: 9999999;}
 .CartBuyBox {width: 230px; display: inline-block; margin: 3px 5px;}
 .CartWrapBox {width: 120px; display: inline-block; margin: 3px 5px;}
 .Cart .CartBuyBox .ActionAWeb3Button {margin: 10px auto;}
@@ -783,7 +783,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .Govright {width: 620px;margin-left: 50px; display: inline-block; vertical-align: top;}
 .DescriptionBig {width: 100%; padding: 20px; font-size: 13px; line-height: 1.2; text-align: left;}
 .DescriptionSmall {width: 450px; font-size: 12px; line-height: 1.2; text-align: left; margin: 20px auto;}
-.DescriptionBig a {text-decoration: underline; font-weight: bold; margin: 5px;}
+.DescriptionBig a {text-decoration: underline; font-weight: bold; margin: 5px;word-break: break-word;}
 
 .HostToolsDelegations {width: 920px; display: block; padding: 60px; text-align: center;  margin: 20px auto; border-radius: 20px; border: 10px solid;}
 .HostToolsDelegations h6 {width: 100%; display: inline-block; font-size: 20px; font-weight: bold; margin: 20px auto;}
@@ -881,7 +881,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .ProposalTitle > h6 > a img {width: 20px; height: 20px; display: inline-block;}
 .MultiVoteBox {width: 450px; display: block; margin: 10px auto; padding: 20px; border-radius: 20px;}
 
-.ModalBoxGov {width: 500px; overflow: scroll; max-height: 70%;  z-index: 10000000; display: flex;  border-radius: 20px;}
+.ModalBoxGov {width: 500px; overflow: scroll; max-height: 70%;  z-index: 99999999; display: flex;  border-radius: 20px;}
 .ProposeContents {width: 450px; display: inline-block; padding: 30px; margin: 5px auto;}
 .ProposeContents h5 {font-size: 20px; font-weight: bold; margin: 10px auto;}
 .ProposeContents .RegularLabel {width: 300px; display: inline-block; padding: 10px; border-radius: 12px; margin: 10px auto;}
@@ -1025,10 +1025,10 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .selected {font-weight: bold;}
 .indicator {height: 30px;}
 
-.medium {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
-.Small {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000;border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
-.Large {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
-.BackButton {position: absolute; top: 0px; left: 0px; padding: 5px 10px; font-size: 13px; border-radius: 100% 10px 10px 0px; background-color: tomato; color: #ffffff; z-index: 100;}
+.medium {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 99999999; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
+.Small {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 99999999;border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
+.Large {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 99999999; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
+.BackButton {position: absolute; top: 0px; left: 0px; padding: 5px 10px; font-size: 13px; border-radius: 100% 10px 10px 0px; background-color: tomato; color: #ffffff; z-index: 999999999;}
 
 .Web3Connect {display: inline-block; text-align:left;margin:10px 10px;}
 .Web3ConnectChain {height: 35px;display: inline-block; padding: 3px 5px; border-radius: 5px;  margin: 0 10px 0 0px; vertical-align: middle;}
@@ -1048,7 +1048,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .NetworkSelect img {width:20px; height:20px;display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;}
 .NetworkSelect p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 40px; overflow: hidden; margin-left: 2px;}
 
-.RightMenu {width: auto; text-align: right; display: inline-block;position: fixed; right: 0px; top: 0px; padding-top: 0px; padding-right: 10px; padding-bottom: 10px; z-index: 100000000000000000000000000; border-radius:0px 0px 0px 12px;-webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px);}
+.RightMenu {width: auto; text-align: right; display: inline-block;position: fixed; right: 0px; top: 0px; padding-top: 0px; padding-right: 10px; padding-bottom: 10px; z-index: 9999999; border-radius:0px 0px 0px 12px;-webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px);}
 
 .ObjectsLists {width: 100%; display: inline-block;}
 .TokenObject {width: 100%; height: 100px; display: inline-block; padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; border: 0px solid; border-radius: 20px; overflow: hidden; cursor: pointer; margin: 5px auto;}
@@ -1149,6 +1149,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .BollinoEth, .BollinoOP {position: absolute; right: 5px; bottom: 5px; font-size: 12px; font-weight: bold; padding: 7px; border-radius: 50%; border: none; z-index: 1000;}
 .CollectionFolder .BollinoEth, .CollectionFolder .BollinoOP, .TradeMarketTokenSelector .BollinoEth , .TradeMarketTokenSelector .BollinoOP {font-size: 8px;padding:3px; right: 2px; bottom: 2px;}
 
+.OnlyMobile {display: none;}
 
 @media only screen and (max-width: 990px) {
   .NavigationItem {font-size: 11px;width: 20%;overflow: hidden; }
@@ -1312,7 +1313,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .GovCardHeadOrganizationTitle .ExtLinkButton {display: none;}
  .GovernanceCardInfoOpen {width: 50%;}
  .GovCardHeadOrganizationInfo {padding: 10px; width: 48%;}
- .GovLeft {width: 100%;}
+ .GovLeft {width: 100%;text-align: center;}
  .Govright {width: 100%; margin-left: 0; margin-top: 10px;}
  .Rules {display: inline-block; width: 55%;margin: 10px;}
  .Rule p {font-size: 10px;line-height: 1.2;}
@@ -1320,14 +1321,34 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .VotingPowersList {display: inline-block; width: 35%; vertical-align: top;}
  .Proposal {padding: 10px;}
  .ProposalTitle {width: 100%; font-size: 13px; line-height: 1.2;}
- .ProposalVotesCount {width: 100%; display: inline-block; text-align: center;}
+ .ProposalVotesCount, .GovCardS .ProposalVotesCount  {width: 100%; display: inline-block; text-align: center;}
  .ProposalVotesCount span {width: 50%; display: inline-block; text-align: left;}
  .ProposalVotesCount .RegularButtonDuo {width: 50%; display: inline-block; text-align: center;}
  .Upshots {width: 100% !important;}
+ .ProposalOpen .Upshots {padding: 5px auto;}
+ .DescriptionBig {padding: 0;}
  .Vote {width: 100%; margin: 10px auto;}
  .DescriptionBig {padding: 10px auto;}
  .MultiVoteBox {width: 100%;}
  .RegularVoteBoxQuantity .TradeMarketTokenAmount {width: 135px !important;}
+ .OptionOpen {width: 100%;}
+ .GovCardS {width: 95%; margin: 10px auto;}
+ .GovCardHeadDelegation figure {width: 35px; height: 35px;}
+ .GovCardHeadDelegation figure img {width: 35px; height: 35px;}
+ .GovCardHeadDelegation span {width: auto; border: none}
+ .GovCardHeadDelegation p {font-size: 10px; text-align: left; width: 45%; display: inline-block;}
+ .GovCardHeadDelegation p b {font-size: 10px;}
+ .GovCardHeadDelegation .ExtLinkButton {display: none;}
+ .DelegationWalletsCardBTN {width: 100px !important; text-align: center; vertical-align: middle; display: inline-block; margin-top: 0;}
+ .GovCardS .Govright {width: 100%;}
+ .GovCardOpened {padding: 10px;}
+ .GovCardS .ProposalTitle {width: 100%;}
+ .DelegationWrap {width: 100%; text-align: center;}
+ .DelegationWrapBox {width: 95%; padding: 5px;}
+ .DelegationWrap p {margin: 5px auto; font-size: 10px;}
+
+ .OnlyDesktop {display: none !important;}
+ .OnlyMobile {display: inline-block !important;}
 
  .AccountAll {width: 95%;}
  .AccountAvatar {width: 80px; height: 80px; margin: 30px auto 10px auto;}
