--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1352,6 +1352,15 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .DelegationWrapBox {width: 95%; padding: 5px;}
  .DelegationWrap p {margin: 5px auto; font-size: 10px;}
  .ObjectInfo {width: 240px !important;}
+ .HostToolsDelegations {width: 95%;padding: 10px;}
+ .medium .CreationPageLabelS {padding: 10px;}
+ .medium .CreationPageLabelFS,.medium textarea  {padding: 1%; width: 95%;}
+.medium .OrgSingle {width: 95%;}
+.medium .OrgTitleEx {width: 170px;}
+.medium .OrgTitleEx h6 {font-size: 14px;}
+
+.CreationPageLabelF .TradeMarketTokenAmount {width: 200px;}
+.CreationPageLabelF > span {word-break: break-word; display: block; width: 95%; margin: 5px auto;}
 
  .CollectionLeft {width: 95%; padding: 5px 0;}
  .ICViewCover {width: 95%;}
